# tocase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  foldcase.cpp  tocase  tocase.cpp  tocase.h  tolower.c  tolower.cpp  tolower.h  totitle.cpp  toupper.cpp
